# FastAPI-IBMEC2026.1

./: README.md  main.py  meu_banco.db  pyproject.toml  sql_basico.sql
